adición de imágenes

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"> 
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item"> 
-                        <a class="nav-link" href="#">About</a> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item"> 
-                        <a class="nav-link" href="#">Services</a> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
                     </li>
-                    <li class="nav-item"> 
-                        <button class="btn-contact" type="submit" aria-disabled="true">Contact</button> 
+                    <li class="nav-item">
+                        <button class="btn-contact" type="submit" aria-disabled="true">Contact</button>
                     </li>
                 </ul>
             </div>
@@ -171,11 +171,52 @@
 
     </div>
 
+<!-- FOOTER -->
 
-    <footer>
-        <h3>Contactanos</h3>
-        <p>LucidSPark Inc</p>
-        <p><a href="mailto:lucidspark@gmail.com">lucidspark@gmail.com</a></p>
+    <footer class="footer-extreme">
+        <div class="footer-container">
+
+            <div class="footer-section">
+                <h4>LucidSpark</h4>
+                <p>
+                    Inspiramos la aventura extrema con contenido responsable,
+                    experiencias reales y una comunidad apasionada por la adrenalina.
+                </p>
+            </div>
+
+            <div class="footer-section">
+                <h5>Deportes</h5>
+                <ul>
+                    <li><a href="#">Rafting</a></li>
+                    <li><a href="#">Paracaidismo</a></li>
+                    <li><a href="#">Escalada</a></li>
+                    <li><a href="#">BMX</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h5>Enlaces</h5>
+                <ul>
+                    <li><a href="#">Artículos</a></li>
+                    <li><a href="#">Seguridad</a></li>
+                    <li><a href="#">Eventos</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h5>Contacto</h5>
+                <p>LucidSpark Inc</p>
+                <p>
+                    <a href="mailto:lucidspark@gmail.com">lucidspark@gmail.com</a>
+                </p>
+            </div>
+
+        </div>
+
+        <div class="footer-bottom">
+            <p>© 2025 LucidSpark. Todos los derechos reservados.</p>
+        </div>
     </footer>
 
     <script
