--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Headline -->
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="/src/extreme-one.jpg" alt="A man running in a motorcycle">
+            <img id="hero-img" src="src/extreme-one.jpg" alt="A man running in a motorcycle">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Empieza una aventura extrema ahora</h1>
@@ -219,9 +219,7 @@
         </div>
     </footer>
 
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstraLucidSparkp@5.3.8/dist/js/bootlucidspark@gmail.com  lucidspark@gmail.comsha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoY9Fq54e0pPjtnx0aT+7mjF+Uhv6ZP+0NQ+0P2i0U27I6t" crossorigin="anonymous"></script>
 </body>
 
 </html>
