correción de ruta de imagen de advertencia

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- Ícono -->
             <div class="alert-icon">
                 <!-- Puedes usar una imagen, ícono SVG o font-icon -->
-                <img src="/src/calavera.png" alt="Advertencia">
+                <img src="src/calavera.png" alt="Advertencia">
             </div>
 
             <!-- Texto de la advertencia -->
