cambio de tamaño de imagen de localización

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <article class="container col-12 col-md-6">
         <p>
-        <h2>Título: Seguridad Radical: La base de la Aventura.</h2>
+        <h2>Seguridad Radical: La base de la Aventura.</h2>
 
         El Problema: Nuestros usuarios aman la adrenalina, pero a menudo ignoran que un mal equipo puede ser fatal.
         Además, legalmente no podemos promocionar riesgo sin advertencia.
@@ -140,7 +140,7 @@
         imágenes increíbles, les recordamos la responsabilidad con una barra de alerta ineludible. Luego, les entregamos
         valor con nuestra guía esencial de "Preparación y Seguridad".
 
-        Por qué funciona: Cumplimos con la ley (protegiendo el negocio) y educamos al usuario (protegiendo su vida),
+        ¿Por qué funciona? Cumplimos con la ley (protegiendo el negocio) y educamos al usuario (protegiendo su vida),
         creando una marca responsable y confiable.</p>
     </article>
     <!-- Section - OUr Services -->
@@ -155,11 +155,11 @@
                 <h3>OUR STORY</h3>
             </div>
             <div class="col-12 col-md-6 containers-div">
-                <h3>OUR ARTICLES></h3>
+                <h3>OUR ARTICLES</h3>
             </div>
             <div class="col-12 col-md-6 containers-div">
-                <p>Our Location
-                    <img src="src/location.jpg">>
+                <p>Our Location<br>
+                    <img src="src/location.jpg">
                 </p>
             </div>
             <div class="col-12 col-md-6 containers-div">
